tests/baselines/reference/for-of40.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of40.ts(2,33): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of40.ts (1 errors) ====
    var map = new Map([["", true]]);
    for (var [k = "", v = false] of map) {
                                    ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        k;
        v;
    }